--- a/03-functions-and-datatable/README.html
+++ b/03-functions-and-datatable/README.html
@@ -266,15 +266,20 @@ test_function(x=c(1,2,3), y=c(&quot;blue&quot;,&quot;red&quot;))</code></pre>
 <pre><code>##  num [1:3] 1 2 3
 ##  chr [1:2] &quot;blue&quot; &quot;red&quot;</code></pre>
 <pre><code>## $x
-## [1] &quot;0x7f98f4ebd5f8&quot;
+## [1] &quot;0x7fa1a3519d58&quot;
 ## 
 ## $y
-## [1] &quot;0x7f99158d2608&quot;</code></pre>
+## [1] &quot;0x7fa1a3521048&quot;</code></pre>
 <p>Knit the document, commit your changes, and push them to GitHub.</p>
 </div>
-<div id="question-2-lady-evaluation" class="section level2">
-<h2>Question 2: <strong>Lady evaluation</strong></h2>
+<div id="question-2-lazy-evaluation" class="section level2">
+<h2>Question 2: <strong>Lazy evaluation</strong></h2>
 <p>A concept we did not review was lazy evaluation. Write a function with two arguments (<code>a</code> and <code>b</code>) that only uses one of them as an integer, and then call the function passing the following arguments <code>(1, this_stuff)</code></p>
+<pre class="r"><code>#lazy evaluation =&gt; R won&#39;t evaluate unless it needs it.
+
+func&lt;-function(a,b){print(a)}
+func(1,this_value_doesnt_exists) #works b/c R does lazy evaluation.</code></pre>
+<pre><code>## [1] 1</code></pre>
 <p>Knit the document, commit your changes, and push them to GitHub.</p>
 </div>
 <div id="question-3-putting-all-together" class="section level2">
