--- a/03-functions-and-datatable/README.html
+++ b/03-functions-and-datatable/README.html
@@ -266,10 +266,10 @@ test_function(x=c(1,2,3), y=c(&quot;blue&quot;,&quot;red&quot;))</code></pre>
 <pre><code>##  num [1:3] 1 2 3
 ##  chr [1:2] &quot;blue&quot; &quot;red&quot;</code></pre>
 <pre><code>## $x
-## [1] &quot;0x7fa1a3519d58&quot;
+## [1] &quot;0x7fb22f4b94a8&quot;
 ## 
 ## $y
-## [1] &quot;0x7fa1a3521048&quot;</code></pre>
+## [1] &quot;0x7fb22f4c4b48&quot;</code></pre>
 <p>Knit the document, commit your changes, and push them to GitHub.</p>
 </div>
 <div id="question-2-lazy-evaluation" class="section level2">
@@ -285,6 +285,12 @@ func(1,this_value_doesnt_exists) #works b/c R does lazy evaluation.</code></pre>
 <div id="question-3-putting-all-together" class="section level2">
 <h2>Question 3: <strong>Putting all together</strong></h2>
 <p>Write a function that fits a linear regression model and saves the result to the global environment using the <code>assign()</code> function. The name of the output must be passed as a symbol using lazy evaluation.</p>
+<pre class="r"><code>lin.func&lt;-function(x,y){
+  assign(x=&quot;Global_linear_fit&quot;,value=lm(y~x), envir = .GlobalEnv) #fit linear model using input x and y, and save the variable as &quot;Global_linear_fit&quot; in the global environment.
+}
+
+test.x&lt;-rnorm(10, mean=10)
+lin.func(x=test.x, y=rpois(10, lambda = 2) + test.x + rnorm(10))</code></pre>
 <p>Knit the document, commit your changes, and push them to GitHub.</p>
 </div>
 </div>
@@ -296,9 +302,11 @@ func(1,this_value_doesnt_exists) #works b/c R does lazy evaluation.</code></pre>
 <li><p>Load the <code>data.table</code> (and the <code>dtplyr</code> and <code>dplyr</code> packages if you plan to work with those).</p></li>
 <li><p>Load the met data from <a href="https://raw.githubusercontent.com/USCbiostats/data-science-data/master/02_met/met_all.gz" class="uri">https://raw.githubusercontent.com/USCbiostats/data-science-data/master/02_met/met_all.gz</a>, and the station data. For the latter, you can use the code we used during the lecture to pre-process the stations’ data:</p></li>
 </ol>
-<pre class="r"><code># Download the data
-stations &lt;- fread(&quot;ftp://ftp.ncdc.noaa.gov/pub/data/noaa/isd-history.csv&quot;)
-stations[, USAF := as.integer(USAF)]
+<pre class="r"><code>library(data.table)
+
+# Download the data
+stations &lt;- fread(&quot;ftp://ftp.ncdc.noaa.gov/pub/data/noaa/isd-history.csv&quot;) #fread &lt;- fast read. Load the data really fast, in data.table format.
+stations[, USAF := as.integer(USAF)] #USAF is read as character. Change it to 
 
 # Dealing with NAs and 999999
 stations[, USAF   := fifelse(USAF == 999999, NA_integer_, USAF)]
